TP4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mon-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
        - name: mon-container
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.6"
              memory: 200M
