TP4/firstpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-pod
spec:
  containers:
    - name: mon-container
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "0.5"
          memory: "512Mi"
